# lxqt-kbdstate

./: .gitignore  CMakeLists.txt  kbdstate-plugin.cpp
cmake/: lxqt-panel-plugin.cmake
src/: content.cpp  content.h  kbdinfo.h  kbdkeeper.cpp  kbdkeeper.h  kbdstate.cpp  kbdstate.h  kbdstateconfig.cpp  kbdstateconfig.ui  kbdwatcher.cpp  kbdwatcher.h
src/x11/: kbdlayout.cpp  kbdlayout.h
themes/ambiance/: lxqt-kbdstate.qss
themes/dark/: lxqt-kbdstate.qss
themes/frost/: lxqt-kbdstate.qss
themes/kde-plasma/: lxqt-kbdstate.qss
themes/light/: lxqt-kbdstate.qss
